<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorTransparent"
    app:cardCornerRadius="16dp"
    app:contentPadding="12dp"
    app:strokeColor="@color/colorWhite"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCategory"
            style="@style/TextBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:minHeight="32dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvGoalsCounter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvGoalsCounter"
            tools:text="Fitness" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGoalsCounter"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btnDown"
            app:layout_constraintEnd_toStartOf="@id/btnDown"
            app:layout_constraintTop_toTopOf="@id/btnDown"
            tools:text="1/5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:paddingVertical="16dp"
            android:src="@drawable/ic_chevron_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:paddingVertical="16dp"
            android:src="@drawable/ic_chevron_up"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dividerTop"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGoals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerTop"
            tools:itemCount="5"
            tools:listitem="@layout/item_goals" />

        <View
            android:id="@+id/dividerBottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvGoals" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/DangerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_delete"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerBottom" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetails"
            style="@style/PrimaryOutlinedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/label_details"
            app:layout_constraintEnd_toStartOf="@id/btnAdd"
            app:layout_constraintStart_toEndOf="@id/btnDelete"
            app:layout_constraintTop_toTopOf="@id/btnDelete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_add"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDelete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>